--- a/css/Estilo.css
+++ b/css/Estilo.css
@@ -6,6 +6,19 @@ body{
   margin: 0;
   padding: 0;
 }
+ #cabecera{
+background-color: aqua;
+color: brown;
+font-weight: bold;
+margin: 0;
+padding: 0.5cm;
+ }
+
+ #cabecera #tagline{
+ padding: 0 0 0 1em;
+ font-weight: normal;
+ font-size: 0.8em;
+ }
 
 #container{
   width: 70%;
@@ -17,4 +30,4 @@ body{
 
 #container h1{
 font-size: 30px;
-}
+}   
